--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
-  "name": "my-node-server",
+  "name": "whatsapp-telegram-bridge",
   "version": "1.0.0",
+  "description": "Headless WhatsApp to Telegram bridge with QR login for Render.com",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "dependencies": {
+    "whatsapp-web.js": "^1.26.0",
+    "node-telegram-bot-api": "^0.61.0",
+    "qrcode": "^1.5.4",
+    "express": "^4.19.2"
   }
 }
