--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "whatsapp-telegram-bridge",
+  "name": "wa-telegram-bridge",
   "version": "1.0.0",
-  "description": "Headless WhatsApp to Telegram bridge with QR login for Render.com",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
   "dependencies": {
-    "whatsapp-web.js": "^1.26.0",
-    "node-telegram-bot-api": "^0.61.0",
+    "express": "^4.19.2",
+    "node-telegram-bot-api": "^0.66.0",
     "qrcode": "^1.5.4",
-    "express": "^4.19.2"
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.25.0"
   }
 }
