--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^143.0.4",
-    "express": "^4.22.1",
-    "node-telegram-bot-api": "^0.63.0",
-    "puppeteer-core": "^24.35.0",
+    "whatsapp-web.js": "^1.26.0",
+    "node-telegram-bot-api": "^0.66.0",
     "qrcode": "^1.5.4",
-    "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.34.4"
+    "express": "^4.21.2",
+    "@sparticuz/chromium": "^131.0.0",
+    "puppeteer-core": "^23.11.1"
   }
 }
